[tool.poetry]
name = "fastapi-asyncalchemy"
version = "0.1.0"
description = ""
authors = ["Petr Stribny <petrstribny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
asyncpg = "^0.29.0"
uvicorn = "^0.24.0.post1"
typer = "^0.9.0"
sqlalchemy = {version = "^1.4.0", extras = ["asyncio"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
